Fixed pattern's z-index for mobile browsers.

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -7,7 +7,7 @@
     min-width: 100%;
     min-height: 100%;
     background-image: url("../gfx/mask.png");
-    z-index: -100;
+    z-index: 0;
     top: 0;
     left: 0;
 }
